# datascribe

./: .gitignore  LICENSE  README.md  pyproject.toml
datascribe/: datascribe.py
docs/: datascribe_framework.md
