[project]
name = "datascribe"
version = "0.1.0"
description = "A framework for enriching AI chatbot interactions through proactive, living documentation of real-world data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name="Zeph Schafer", email="zephyr.schafer@gmail.com" }
]
dependencies = [
  "httpx>=0.28.1",
  "mcp[cli]>=1.6.0",
  "google-cloud-bigquery>=3.17.2",
  "google-auth>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/zephschafer/datascribe"
Documentation = "https://github.com/zephschafer/datascribe#readme"
Repository = "https://github.com/zephschafer/datascribe"
Issues = "https://github.com/zephschafer/datascribe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
datascribe = "datascribe.main:main"